<resources>
    <string name="app_name">SmallBrother</string>

    <!-- Indications -->

    <string name="indic_launch1">
        Bonjour, et merci d\'avoir choisi SmallBrother pour vous aider.
    </string>
    <string name="install">Installation</string>
    <string name="installDant">[Aidant] Installation</string>
    <string name="installde">[Aidé] Installation</string>
    <string name="install_note1">
        Avant tout, il va falloir installer et configurer l\'application sur deux téléphones,
        selon le rôle de chacun :
    </string>
    <string name="install_note2">Veuillez svp compléter ces champs :</string>
    <string name="install_note3">
        [Facultatif] : prendre une photo de la personne aidée pour les cas d\'urgence.
    </string>
    <string name="input1A">Nom de l\'Aidant</string>
    <string name="input1B">Nom de l\'Aidé</string>
    <string name="input2A">N° de portable de l\'Aidé</string>
    <string name="input2B">N° de portable de l\'Aidant</string>
    <string name="log_intitule">Dernière nouvelle :</string>
    <string name="reglages_intitule">Réglages</string>
    <string name="reglages_note">
        Ce menu vous permet de réinitialiser vos information et celles de l\'aidé. Vous pouvez également refaire la photo de l\'aidé. \n
        Attention, si vous réinitialiser les informations, vous devrez réinstaller l\'application sur les deux smartphones.
    </string>
    <string name="chargement">Chargement en cours </string>
    <string name="cheminphoto">Stockage Interne/Download/SmallBrother/photo_aide.jpg</string>
    <string name="nophoto">Aucun fichier trouvé.</string>
    <string name="reacpitulatif_cln1">→ Nom : \n→ Numéro de l\'Aidé : </string>
    <string name="popup1">
        Entrez une durée en minutes (maximum 120) durant laquelle vous ne souhaitez pas
        que votre partenaire puisse vérifier vos informations :
    </string>
    <string name="intitule_delai">Temps restant : </string>


    <!-- Boutons -->

    <string name="btn_commencer">Commencer</string>
    <string name="btn_role1">Ce téléphone est celui de l\'Aidant</string>
    <string name="btn_role2">Ce téléphone est celui de l\'Aidé</string>
    <string name="btn_previous">Précédent</string>
    <string name="btn_continue">Continuer</string>
    <string name="btn_terminer">Terminer</string>
    <string name="btn_valider">Valider</string>
    <string name="btn_annuler">Annuler</string>
    <string name="btn_sauver">Sauver</string>
    <string name="btn_capture">Prendre une Photo</string>
    <string name="btn_capture2">Prendre la Photo</string>
    <string name="btn_sms_va_dant">Envoi SMS: Tout va bien ?</string>
    <string name="btn_sms_va_de">Envoi SMS: Oui, tout va bien</string>
    <string name="btn_appel">Appeler §%</string>
    <string name="btn_urgence">Capturer le contexte §%</string>
    <string name="btn_tiers">Envoyer les info par mail à …</string>
    <string name="btn_reinit_1">Réinitialiser les informations</string>
    <string name="btn_reinit_3">Refaire la photo de l\'Aidé</string>
    <string name="btn_switch">Mode Privé </string>


    <!-- Messages Système -->

    <!-- Messages -->
    <string name="oui">Oui</string>
    <string name="message01">SmallBrother reste actif en arrière-plan.</string>
    <string name="message02_titre">Réinitialiser l\'application</string>
    <string name="message02_texte">Confirmez-vous cette action ?</string>
    <string name="message02_settings">Confirmez-vous cette action ? Vous devrez réinstaller
        l\'application sur les deux smartphones pour pouvoir l\'utiliser à nouveau. Cette action
        entraînera la suppression des données en lien avec l\'application sur les smartphones de
        l\'aidant et de l\'aidé (informations, photo). Les captures de contexte seront toujours
        disponibles dans votre dossier de téléchargement.</string>
    <string name="message03A">Suppression effectuée.</string>
    <string name="message03B">Un SMS de déclenchement a été envoyé à votre partenaire.</string>
    <string name="message04">SMS envoyé.</string>
    <string name="message05">L\'appel est lancé.</string>
    <string name="message06">
        Votre partenaire tente de vérifier votre situation.\n\n
        Veuillez patienter pendant que SmallBrother réalise les actions requises.
    </string>
    <string name="message06B">
        RAPPEL :
        ce processus va déclencher les appareils photo, micro et outils de localisation
        de votre smartphone.
    </string>
    <string name="message07">La demande a été envoyée.</string>
    <string name="message09">Photo de votre partenaire mise à jour.</string>
    <string name="message10">Mode Privé activé pour §% minute(s).</string>
    <string name="message11">Mode Privé désactivé.</string>
    <string name="message12A">EN COURS : enregistrement audio.</string>
    <string name="message12B">EN COURS : prise des photos.</string>
    <string name="message12C">EN COURS : localisation du téléphone.</string>
    <string name="message12D">EN COURS : compression des fichiers.</string>
    <string name="message12E">EN COURS : récupération du niveau de batterie.</string>
    <string name="message12F">EN COURS : envoi du rapport de situation.</string>
    <string name="message13A">Avertissement :</string>
    <string name="message13B">
        Installer la version Aidé de SmallBrother donnera à votre partenaire accès
        à vos informations contextuelles.\nUne vérification de vos données contextuelles
        lui permettra de capturer un échantillon audio de 10 secondes, deux photos
        prises automatiquement, et d\'obtenir la localisation ainsi que le niveau de
        batterie de votre téléphone.
    </string>
    <string name="message13C">Information :</string>

    <!-- Erreurs -->
    <string name="error01">
        Le numéro doit être au format GSM belge standard (04 puis huit chiffres).
    </string>
    <string name="error03">Tous les champs doivent être complétés.</string>


    <!-- SMS Système -->

    <string name="smsys01">
        SmallBrother : §% lance la réinitialisation de vos données. [#SB01]
    </string>
    <string name="smsys02">SmallBrother : §% vous demande si tout va bien ? [#SB02]</string>
    <string name="smsys03">SmallBrother : §% vous signale que tout va bien ! [#SB03]</string>
    <string name="smsys04">
        SmallBrother : §% demande à vérifier votre situation.[#SB04]
    </string>
    <string name="smsys05">SmallBrother : §% n\'est actuellement pas connecté à Internet ! [#SB05]</string>
    <string name="smsys06">SmallBrother : §% a transféré ses informations sur le serveur. [#SB06]</string>
    <string name="smsys07">SmallBrother : §% a activé le Mode Privé. (N#)[#SB07]</string>
    <string name="smsys08">SmallBrother : §% a besoin d\'assistance immédiatement! [#SB08]</string>
    <string name="smsys10">"SmallBrother : §% [#SB10]"</string>


    <!-- Log -->

    <string name="log01">Installation terminée.</string>
    <string name="log02">Réinitialisation des données SmallBrother sur votre téléphone.</string>
    <string name="log03">Réinitialisation des données SmallBrother sur le téléphone de votre partenaire.</string>
    <string name="log04">Envoi d\'un SMS \'Tout va bien ?\' à votre partenaire.</string>
    <string name="log05">SMS reçu : votre partenaire va bien.</string>
    <string name="log06">SMS reçu : votre partenaire demande si tout va bien ?</string>
    <string name="log07">Vous appelez votre partenaire.</string>
    <string name="log08">Votre partenaire vous a appelé.</string>
    <string name="log09">Vous avez manqué un appel de votre partenaire.</string>
    <string name="log10">
        Vous avez demandé à vérifier la situation de l\'Aidé.
        Le traitement est en cours, veuillez patienter …
    </string>
    <string name="log11">
        Les données §% sont disponibles sur le serveur, vous pouvez appuyer sur le bouton "Récupérer les données §%".
    </string>
    <string name="log12">
        Votre partenaire tente de vérifier votre situation.
        Pourquoi ne pas l\'appeler ?
    </string>
    <string name="log16">Vous signalez à votre partenaire que tout va bien.</string>
    <string name="log18">Le délai du Mode Privé est écoulé.</string>
    <string name="log19">
        Votre partenaire souhaite ne pas être dérangé durant les N# prochaines minutes.
    </string>
    <string name="log20">Vous avez activé le mode privé.</string>
    <string name="logo_unamur">Logo UNamur</string>
    <string name="aidant_nom_installation">Veuillez saisir le nom de l\'aidant:</string>
    <string name="portable_aide_installation">Veuillez saisir le numéro de portable de l\'Aidé:</string>
    <string name="logo_sb">Logo SB</string>
    <string name="empty_string">" "</string>
    <string name="transfert_data">Transférer les données par QR Code</string>
    <string name="help_aide">J\'ai besoin d\'assistance</string>
    <string name="recuperer_les_donnees_de_l_aide">Récupérer les données §%</string>

    <string name="qr_code_aide">Générer un QR Code pour l\'aidé</string>
    <string name="generate_qrCode">Générer un QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_police">Générer un QR Code pour la police</string>
    <string name="explication_qr_aide">QR Code à scanner par l\'aidé</string>
    <string name="explication_qr_police">QR Code à scanner par la police pour télécharger les fichiers</string>
    <string name="aide_install2">[Aidé] Installation (suite)</string>
    <string name="explication_aide_scan">Veuillez scanner le QR Code sur le smartphone de l\'aidant. Il se trouve dans les paramètres de son application (symbole d\'engrenage)</string>
    <string name="installAide2">[INSTALLATION] Veuillez scanner le QR code sur le smartphone de l\'aidant pour terminer l\'installation</string>
    <string name="installAidant3">[INSTALLATION] Veuillez scanner le QR code sur le smartphone de l\'aidé pour terminer l\'installation</string>
    <string name="installQRAidant">[INSTALLATION] Scannez ce QR code avec le smartphone de l\'aidé, puis appuyez sur le bouton Terminer</string>
    <string name="installQRAide">[INSTALLATION] Scannez ce QR code avec le smartphone de l\'aidant, puis appuyez sur le bouton Terminer</string>
    <string name="nomAide">Nom de l\'Aidé</string>
    <string name="blank" />
    <string name="duree_prive_base">15</string>
    <string name="aide_needs_help">§% a besoin d\'aide immédiatement. Vous pouvez récupérer ses données.</string>
    <string name="contentDesc_photo">Boutton photo</string>
    <string name="contentDesc_reduire">Bouton Réduire</string>
    <string name="contentDesc_log">Cadre du log</string>
    <string name="contentDesc_reglages">Bouton Réglages</string>

</resources>
