<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ombreshape">


    <!-- Cadre Textes -->
    <LinearLayout
        android:id="@+id/cadre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="24dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/metalliqueshape" >

        <!-- Installation -->
        <TextView
            android:id="@+id/intitule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:text="@string/installde"
            android:textColor="#404040"
            android:textSize="24sp" />

        <!-- Note explicative 1 -->
        <TextView
            android:id="@+id/install_note2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/install_note2"
            android:textColor="#262626"
            android:textSize="27sp" />

        <!-- [INPUTS] -->

        <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >

            <EditText
                android:id="@+id/input_nom"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/input1B"
                android:textSize="27sp"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/input_partner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input1A"
                android:textSize="27sp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/input_telephone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/input2B"
                android:inputType="phone"
                android:textSize="27sp"
                android:importantForAutofill="no" />

        </LinearLayout>

    </LinearLayout>

    <!-- Cadre Boutons -->
    <LinearLayout
        android:id="@+id/cadre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/metalliqueshape"
        app:layout_constraintTop_toBottomOf="@id/cadre1"
        android:layout_below="@id/cadre1" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/btn_previous"
                android:layout_height="wrap_content"
                android:minHeight="60sp"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:orientation="vertical"
                android:text="@string/btn_previous"
                android:textColor="#FFFFFF"
                android:textSize="27sp"
                android:textAllCaps="false"
                android:background="@drawable/boutonsshape"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_height="wrap_content"
                android:minHeight="60sp"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:orientation="vertical"
                android:text="@string/btn_continue"
                android:textColor="#FFFFFF"
                android:textSize="27sp"
                android:textAllCaps="false"
                android:background="@drawable/boutonsshape"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>

    <!-- Cadre Avertissement -->
    <LinearLayout
        android:id="@+id/cadre3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/metalliqueshape"
        app:layout_constraintTop_toBottomOf="@id/cadre2"
        android:layout_below="@id/cadre2" >

        <TextView
            android:id="@+id/titre_avertissement"
            android:layout_width="wrap_content"
            android:minWidth="56sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/message13A"
            android:textStyle="bold"
            android:textColor="#262626"
            android:textSize="15sp"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/avertissement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/message13B"
            android:textColor="#262626"
            android:textSize="19sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>