<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ombreshape">

    <!-- Cadre Principal -->
    <LinearLayout
        android:id="@+id/cadre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/metalliqueshape" >

        <!-- Entête -->
        <LinearLayout
            android:id="@+id/cadre1B"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:baselineAligned="false"
            android:weightSum="1.0"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" >

            <!-- Logo -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:orientation="horizontal"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/logo2" />

            </LinearLayout>

        </LinearLayout>

        <!-- Ligne 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            android:background="#404040"
            android:alpha="0.1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/installQRAidant"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:textColor="#404040"/>

        <!-- Cadre QR Code -->
        <LinearLayout
            android:id="@+id/cadre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/metalliqueshape"
            app:layout_constraintTop_toBottomOf="@id/cadre1" >

            <ImageView
                android:id="@+id/ivqrcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qr_code" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:background="#404040"
            android:alpha="0.1" />

        <!-- Bouton Générer QR Code Aidé -->
        <FrameLayout
            android:id="@+id/contour1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/btn_terminer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/btn_terminer"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:background="@drawable/boutons2shape"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:shadowColor="#000000"
                android:shadowRadius="5" />

        </FrameLayout>

        <!-- Ligne -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            android:background="#404040"
            android:alpha="0.1" />

        <!-- Logo UNamur -->
        <!--<ImageView
            android:id="@+id/unamur"
            android:layout_width="104dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:src="@drawable/unamur"
            android:alpha="0.60" />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>